cocos2d-x-3.3
    [NEW]           3d: added light support: direction light, point light, spot light and ambient light
    [NEW]           Audio: new audio supports Mac OS X and Windows
    [NEW]           Application: added openUrl()
    [NEW]           Armature: added getOffsetPoints()
    [NEW]           Lua-binding: added Camera3DTest ,BillBoradTest
    [NEW]           Rect: added merge()
    [NEW]           Utils: added getCascadeBoundingBox()
    [NEW]           UI: `WebView` support on windows
    [NEW]           WP8: enabled screen orientation change handling
    
    [FIX]           Accelerometer: using Accelerometer will freeze app and then crash on WP8 
    [FIX]           C++: remove armv7s in VALID_ARCHS for Xcode projects
    [FIX]           Cocos Studio: UI animation playing crash if GUI JSON file is loaded again
    [FIX]           Cocos Studio: improvement ImageViewReader don't necessary loadTexture when imageFilePath is empty
    [FIX]           EditBox: view rendereed in wrong position if click EditBox on iOS 8
    [FIX]           Label: getStringNumLines() may returns wrong result if label is dirty
    [FIX]           Lua-binding: may crash if passing two-dimensional table from lua to c++
    [FIX]           New audio: can not play audio after playing some times on Android
    [FIX]           TextFieldTTF: will get wrong characters if using Chinese input method on WP8

cocos2d-x-3.3  Sep.20 2014
    [NEW]           3d: added `BillBoard`
    [NEW]           ActionManager: added removeAllActionsByTag()
    [NEW]           Audio: added new audio system for iOS and Android
    [FIX]           DrawNode: has as many functions as `DrawPrimitive`
    [NEW]           GLViewProtocol: added getAllTouches()
    [NEW]           Node: added stopAllActionsByTag()
    [NEW]           PhysicsWorld: add setSubsteps() and getSubsteps()
    [NEW]           Renderer: added TriangleCommand
    [NEW]           UI: added `WebView` on iOS and Android
    