@@ -128,6 +128,19 @@ protected:
     SchedulerTest1();
 };
 
+class SchedulerCallbackTest : public TestCocosNodeDemo
+{
+public:
+    CREATE_FUNC(SchedulerCallbackTest);
+    virtual std::string subtitle() const override;
+    virtual void onEnter() override;
+
+protected:
+    float _total;
+    SchedulerCallbackTest();
+};
+
+
 class NodeToWorld : public TestCocosNodeDemo
 {
 public:
