@@ -1,9 +1,10 @@
-cocos2d-x-3.3
+cocos2d-x-3.3-beta1
     [NEW]           3d: added light support: direction light, point light, spot light and ambient light
     [NEW]           Audio: new audio supports Mac OS X and Windows
     [NEW]           Application: added openUrl()
     [NEW]           Armature: added getOffsetPoints()
     [NEW]           Lua-binding: added Camera3DTest ,BillBoradTest
+    [NEW]           Node: schedule/unschedule lambda functions
     [NEW]           Rect: added merge()
     [NEW]           Utils: added getCascadeBoundingBox()
     [NEW]           UI: `WebView` support on windows
@@ -19,7 +20,7 @@ cocos2d-x-3.3
     [FIX]           New audio: can not play audio after playing some times on Android
     [FIX]           TextFieldTTF: will get wrong characters if using Chinese input method on WP8
 
-cocos2d-x-3.3  Sep.20 2014
+cocos2d-x-3.3-beta0  Sep.20 2014
     [NEW]           3d: added `BillBoard`
     [NEW]           ActionManager: added removeAllActionsByTag()
     [NEW]           Audio: added new audio system for iOS and Android
